enable nuget restore

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Data\packages.config" />
+  <repository path="..\Infra\packages.config" />
+  <repository path="..\Service\packages.config" />
+  <repository path="..\Tests\packages.config" />
   <repository path="..\WebUI\packages.config" />
 </repositories>
