--- a/Tests/app.config
+++ b/Tests/app.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Db" connectionString="Data Source=.\sqlexpress;Database=prodinner;UID=sa;pwd=1;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="Db" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=|DataDirectory|\database\prodinner.mdf;Initial Catalog=prodinner;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
